<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/white">

    <TextView
        android:id="@+id/kullaniciGirisText"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/kayit"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_marginTop="100dp"
        android:paddingTop="30dp"/>

    <EditText
        android:id="@+id/mailField"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:hint="@string/mail"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_below="@id/kullaniciGirisText"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_edittext_background"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        android:gravity="start|center_vertical"
        />

    <EditText
        android:id="@+id/sifreField"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:hint="@string/sifre"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_below="@id/mailField"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_edittext_background"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        android:gravity="start|center_vertical"/>

    <Button
        android:id="@+id/kayitOlButton"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:layout_below="@id/sifreField"
        android:layout_centerInParent="true"
        android:text="@string/kayit"
        android:textColor="#7C7A7A"
        android:backgroundTint="#EBEAEA"
        android:padding="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="25dp"/>
        />


    <TextView
        android:id="@+id/metinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Giriş yapmak için"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/kayitOlButton"
        android:layout_marginTop="25dp"/>


    <Button
        android:id="@+id/girisYapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tıklayın"
        android:background="@android:color/transparent"
        android:layout_toEndOf="@id/metinTextView"
        android:layout_alignBaseline="@id/metinTextView"
        android:layout_centerVertical="true"
        android:textColor="@color/black"

        />
</RelativeLayout>

